fix: make gap like in the layout

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -345,7 +345,7 @@
 
 	&__skills {
 		display: flex;
-		row-gap: 20px;
+		row-gap: 17px;
 		flex-direction: column;
 		flex-wrap: nowrap;
 		margin-top: 18px;
